# aws-examples

./: .gitignore
.github/workflows/: terraform-ci.yml
account-settings/: README.md  identitystore.tf  main.tf  organizations.tf  terraform.tfvars.tmpl  variables.tf
ai-agent/: README.md
ai-agent/ai-agent-framework/: README.md  pyproject.toml
ai-agent/ai-agent-framework/python/: pyproject.toml
ai-agent/ai-agent-framework/python/src/: adk_trial.py  autogen_trial.py  langgraph_trial.py  openai_agents_sdk_trial.py  strands_agents_trial.py
ai-agent/converse-api/: pyproject.toml
ai-agent/handson/: README.md  pyproject.toml
ai-agent/langgraph-agent/: .env.sample  pyproject.toml
ai-agent/langgraph-human-in-the-loop/: pyproject.toml
ai-agent/langgraph-human-in-the-loop/report/: langgraph_report.html
ai-agent/langgraph-human-in-the-loop/src/: agent.py  main.py  tools.py
ai-agent/langgraph-mcp-agent/: aws_bedrock_model_providers.md  pyproject.toml
ai-agent/langgraph-mcp-agent/src/: main.py  mcp_tools.py
ai-agent/mastra-workflow/: .prettierignore  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
alb-ecs/: README.md
alb-ecs/app/: Cargo.toml
alb-ecs/infra/: acm.tf  alb.tf  cognito.tf  ecs.tf  (+7 more)
apigw-lambda/: .gitignore
cloudfront-vpc-origin-internal-alb/: acm.tf  alb.tf  cloudfront.tf  main.tf  route53.tf  terraform.tfvars.tmpl  variables.tf  vpc.tf
cloudtrail/: cloudtrail.tf  main.tf  terraform.tfvars.tmpl  variables.tf
subdomain-phz/: README.md
vpc/: README.md  main.tf  outputs.tf  terraform.tfvars.tmpl  variables.tf  vpc.tf
(+37 files in other folders)
