[project]
name = "ai-agent-framework"
version = "0.1.0"
description = "Hands-on code of AIエージェント開発/運用入門"
requires-python = ">=3.13, <3.14"

dependencies = [
  ## langgraph
  "langchain",
  "langgraph",
  "langchain-aws",

  ## crew ai
  "crewai",

  ## AutoGen
  "autogen_agentchat",
  "autogen_ext",

  "boto3",
  "python-dotenv",
  "ruff",
]
